Improve report generation and add example code