@@ -60,40 +60,75 @@ public class ReportGenerator extends AbstractMojo {
     }
 
     private void analyzeJavaFile(File javaFile, BufferedWriter writer) throws IOException {
-        String content = new String(Files.readAllBytes(javaFile.toPath()), StandardCharsets.UTF_8);
+        String content = Files.readString(javaFile.toPath());
 
-        Pattern classPattern = Pattern.compile("class\\s+(\\w+)");
-        Matcher classMatcher = classPattern.matcher(content);
+        Pattern typePattern = Pattern.compile("(class|interface|enum|record)\\s+(\\w+)");
+        Matcher typeMatcher = typePattern.matcher(content);
 
-        if (classMatcher.find()) {
-            String className = classMatcher.group(1);
-            writer.write("\tClass: " + className);
+        if (typeMatcher.find()) {
+            String typeKeyword = typeMatcher.group(1);
+            String typeName = typeMatcher.group(2);
+
+            String capitalizedKeyword = typeKeyword.substring(0, 1).toUpperCase() + typeKeyword.substring(1);
+
+            writer.write(capitalizedKeyword + ": " + typeName);
             writer.newLine();
 
-            writer.write("\tFields:");
-            writer.newLine();
-            Pattern fieldPattern = Pattern.compile("(public|private|protected)\\s+\\S+\\s+(\\w+)\\s*;");
+            Pattern fieldPattern = Pattern.compile("(public|private|protected)\\s+(.*?)\\s+(\\w+)\\s*(=|;)");
             Matcher fieldMatcher = fieldPattern.matcher(content);
 
-            while (fieldMatcher.find()) {
-                String accessModifier = fieldMatcher.group(1);
-                String fieldName = fieldMatcher.group(2);
+            if (fieldMatcher.find()) {
+                writer.write("Fields:");
+                writer.newLine();
+                do {
+                    String accessModifier = fieldMatcher.group(1);
+                    String typeAndExtras = fieldMatcher.group(2);
+                    String fieldName = fieldMatcher.group(3);
 
-                writer.write("\t\t" + accessModifier + " " + fieldName);
+                    writer.write("\t" + accessModifier + " " + typeAndExtras + " " + fieldName);
+                    writer.newLine();
+                } while (fieldMatcher.find());
+            } else {
+                writer.write("Fields: absent");
                 writer.newLine();
             }
 
-            writer.write("\tMethods:");
-            writer.newLine();
-            Pattern methodPattern = Pattern.compile("(public|private|protected)\\s+\\S+\\s+(\\w+)\\s*(\\(.*?\\))");
+            Pattern constructorPattern = Pattern.compile("(public|private|protected)\\s+(" + typeName + ")\\s*(\\(.*?\\))");
+            Matcher constructorMatcher = constructorPattern.matcher(content);
+
+            if (constructorMatcher.find()) {
+                writer.write("Constructors:");
+                writer.newLine();
+                do {
+                    String accessModifier = constructorMatcher.group(1);
+                    String constructorName = constructorMatcher.group(2);
+                    String parameters = constructorMatcher.group(3);
+
+                    writer.write("\t" + accessModifier + " " + constructorName + parameters);
+                    writer.newLine();
+                } while (constructorMatcher.find());
+            } else {
+                writer.write("Constructors: absent");
+                writer.newLine();
+            }
+
+            Pattern methodPattern = Pattern.compile("(public|private|protected)\\s+(.*?)\\s+(\\w+)\\s*(\\(.*?\\))");
             Matcher methodMatcher = methodPattern.matcher(content);
 
-            while (methodMatcher.find()) {
-                String accessModifier = methodMatcher.group(1);
-                String methodName = methodMatcher.group(2);
-                String parameters = methodMatcher.group(3);
+            if (methodMatcher.find()) {
+                writer.write("Methods:");
+                writer.newLine();
+                do {
+                    String accessModifier = methodMatcher.group(1);
+                    String typeAndExtras = methodMatcher.group(2);
+                    String methodName = methodMatcher.group(3);
+                    String parameters = methodMatcher.group(4);
 
-                writer.write("\t\t" + accessModifier + " " + methodName + parameters);
+                    writer.write("\t" + accessModifier + " " + typeAndExtras + " " + methodName + parameters);
+                    writer.newLine();
+                } while (methodMatcher.find());
+            } else {
+                writer.write("Methods: absent");
                 writer.newLine();
             }
 
